Initial Commit... set up classes @TODO: work on Main method next

--- a/MlApp2ClassifierFastTreeBinary/MlApp2ClassifierFastTreeBinary.csproj
+++ b/MlApp2ClassifierFastTreeBinary/MlApp2ClassifierFastTreeBinary.csproj
@@ -5,4 +5,17 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ML" Version="0.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\wikipedia-detox-250-line-data.tsv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\wikipedia-detox-250-line-test.tsv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
